<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/my_order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:text="@string/my_order" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:columnCount="2"
        android:rowCount="2">

        <Button
            android:id="@+id/drinks_button"
            android:layout_margin="16dp"
            android:width="100dp"
            android:text="@string/drinks" />

        <Button
            android:id="@+id/snacks_button"
            android:layout_margin="16dp"
            android:width="100dp"
            android:text="@string/snacks" />

        <Button
            android:id="@+id/foods_button"
            android:layout_margin="16dp"
            android:width="100dp"
            android:text="@string/foods" />

        <Button
            android:id="@+id/top_up_button"
            android:layout_margin="16dp"
            android:width="100dp"
            android:text="@string/top_up" />
    </GridLayout>


</RelativeLayout>