<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OrderDetail">

    <TextView
        android:id="@+id/item_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="Product Name"
        android:textSize="12pt"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/item_detail_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_detail_name"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="Product Price"
        android:textSize="8pt" />

    <EditText
        android:id="@+id/item_detail_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_detail_price"
        android:layout_margin="8dp"
        android:hint="Quantity"
        android:inputType="number"
        android:maxLines="1"
        android:padding="8dp">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/item_detail_add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/item_detail_other"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="4dp"
        android:text="@string/add_to_cart" />

    <LinearLayout
        android:id="@+id/item_detail_other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/item_detail_order_more_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="4dp"
            android:layout_weight="1"
            android:text="@string/order_more" />

        <Button
            android:id="@+id/item_detail_my_order_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="4dp"
            android:layout_weight="1"
            android:text="@string/my_order" />
    </LinearLayout>

</RelativeLayout>